--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,12 @@
+:root {
+    --vh: 100%;
+ }
+ 
+ html,
+ body {
+     height: 100%;
+     height: var(--vh);
+ }
 .dark body{
     background: #2b2b2b;
 }
