메인 화면 정상화, 테크 화면 작업 시작

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,8 +4,10 @@
  
  html,
  body {
-     height: 100%;
-     height: var(--vh);
+    height: 100%;
+    height: var(--vh);
+    margin: 0;
+    padding: 0;
  }
 .dark body{
     background: #2b2b2b;
