본문에서 글 가지고 오기

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -17,3 +17,16 @@
     font-family: '';
     background: #fff;
 }
+
+
+/* .dark pre code {
+    text-align: left !important;
+    background-color: rgb(138, 138, 138) !important;
+    color:#fff;
+} */
+
+/* .dark pre {
+    text-align: left !important;
+    background-color: rgb(138, 138, 138) !important;
+    color:#fff;
+} */
