검색기능 관련 함수 설계및 추가

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -37,3 +37,12 @@
     display:flex;
     align-items: center;
 }
+
+
+.dark input[type=text]{
+    color:#fff;
+}
+
+.light input[type=text]{
+    color:#000;
+}
